2003-01-06  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: updated for 0.5.1.
	* README: update requirements.
	* TODO: updated.

	* src/dialogs.c (teamdialog_new): patch from Dani which converts
	input to UTF-8,

2003-01-06  Dani Carbonell  <bocata@panete.net>

	* src/dialogs.c (prefdialog_new): fixed the code that checks
	if the window is opened or not, now it should not crash, even if
	abused, also connected the "destroy" signal.
	(connectingdialog_new): likewise (this should stop the connecting
	crash).
	(connectdialog_new): likewise, and I changed the button order, so
	now it's HIG compliant (OK buttons in the lower right corner).
	(teamdialog_new): likewise, and connected the "destroy" signal.

2003-01-05  Jordi Mallach  <jordi@sindominio.net>

	* NEWS, configure.in: released gtetrinet 0.5.0.

2003-01-05  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: updated for 0.5.0.
	* TODO: updated.

2003-01-05  Jordi Mallach  <jordi@sindominio.net>

	* src/commands.c (toolbar): assign an icon to the detach button,
	and add useful tooltips to each button.

2003-01-05  Dani Carbonell  <bocata@panete.net>

	* TODO: updated.

	* src/dialogs.c (connectingdialog_new): fixed behaviour when opening
	more than one window, now it presents the existing one.
	(teamdialog_new):likewise.
	(prefdialog_new):likewise.

	* src/tetrinet.c (tetrinet_key): we were giving focus to the gmsginput
	even if there was no such input visible, now we only give focus if
	gmsgstate == 1 (while writing message).

	* src/gtetrinet.c (main): gtk_window_set_policy is deprecated,
	changed to gtk_window_set_resizable.

2003-01-05  Jordi Mallach  <jordi@sindominio.net>

	* Adapt patch from Jan Bretschneider with some UI improvements that
	mimic windows tetrinet's behaviour.
	* src/gtetrinet.c (show_fields_page): new function, switches to fields
	notebook tab.
	(show_partyline_page): new funtion, switches to partyline notebook
	tab.
	* src/tetrinet.c (tetrinet_inmessage): switch to partyline on