@@ -1,3 +1,8 @@
+2003-01-06  Dani Carbonell  <bocata@panete.net>
+
+	* dialogs.c (prefdialog_themelist): don't select a theme if we can't
+	find it in the current theme list.
+
 2003-01-06  Jordi Mallach  <jordi@sindominio.net>
 
 	* NEWS: updated for 0.5.1.
